<resources>
    <string name="app_name">Football Apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quit">Anda Yakin Ingin Keluar</string>
    <string name="vs">vs</string>
    <string name="goal">Goals</string>
    <string name="shoot">Shoots</string>
    <string name="lineUps">LineUp</string>
    <string name="goalKeeper">Goal Keeper</string>
    <string name="defense">defense</string>
    <string name="midfield">MidFielder</string>
    <string name="forward">Forward</string>
    <string name="subtitutes">Subtitution</string>
    <string name="favorit">Favorite</string>

</resources>
