<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".detailmatch.DetailMatchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/dimen_10"
        >
        <TextView
            android:id="@+id/dateEvent"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/strTime"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="5"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="@dimen/dimen_0"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/badgeHome"
                    android:layout_width="@dimen/dimen_50"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/strHomeTeam"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/strHomeFormation"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:weightSum="5"
                android:layout_height="wrap_content">
                <TextView
                    android:textAlignment="center"
                    android:id="@+id/intHomeScore"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAlignment="center"
                    android:layout_margin="@dimen/dimen_10"
                    android:text="@string/vs"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:id="@+id/intAwayScore"
                    android:textStyle="bold"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="@dimen/dimen_0"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/badgeAway"
                    android:layout_width="@dimen/dimen_50"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/strAwayTeam"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:textAlignment="center"
                    android:id="@+id/strAwayFormation"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:text="@string/goal"
            style="@style/TextHeader" />
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/dimen_2"
                android:id="@+id/strHomeGoalDetails"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="@dimen/dimen_2"
                android:id="@+id/strAwayGoalDetails"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:text="@string/shoot"
            style="@style/TextHeader" />
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/dimen_2"
                android:id="@+id/intHomeShots"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
            <TextView
                tools:ignore="RtlCompat"
                android:gravity="right"
                android:textAlignment="textEnd"
                android:padding="@dimen/dimen_2"
                android:id="@+id/intAwayShots"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:text="@string/lineUps"
            style="@style/TextHeader" />
        <TextView
            android:text="@string/goalKeeper"
            style="@style/TextHeader" />
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/dimen_2"
                android:id="@+id/strHomeLineupGoalkeeper"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
            <TextView
                tools:ignore="RtlCompat"
                android:gravity="right"
                android:textAlignment="textEnd"
                android:padding="@dimen/dimen_2"
                android:id="@+id/strAwayLineupGoalkeeper"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:text="@string/defense"
            style="@style/TextHeader" />
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/dimen_2"
                android:id="@+id/strHomeLineupDefense"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
            <TextView
                tools:ignore="RtlCompat"
                android:gravity="right"
                android:textAlignment="textEnd"
                android:padding="@dimen/dimen_2"
                android:id="@+id/strAwayLineupDefense"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:text="@string/midfield"
            style="@style/TextHeader" />
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/dimen_2"
                android:id="@+id/strHomeLineupMidfield"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
            <TextView
                tools:ignore="RtlCompat"
                android:gravity="right"
                android:textAlignment="textEnd"
                android:padding="@dimen/dimen_2"
                android:id="@+id/strAwayLineupMidfield"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:text="@string/forward"
            style="@style/TextHeader" />
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/dimen_2"
                android:id="@+id/strHomeLineupForward"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
            <TextView
                tools:ignore="RtlCompat"
                android:gravity="right"
                android:textAlignment="textEnd"
                android:padding="@dimen/dimen_2"
                android:id="@+id/strAwayLineupForward"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:text="@string/subtitutes"
            style="@style/TextHeader" />
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/dimen_2"
                android:id="@+id/strHomeLineupSubstitutes"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
            <TextView
                tools:ignore="RtlCompat"
                android:gravity="right"
                android:textAlignment="textEnd"
                android:padding="@dimen/dimen_2"
                android:id="@+id/strAwayLineupSubstitutes"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>